--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "build": "tsc && babel src -d build --extensions '.ts'",
-    "start": "node build/app.js",
+    "start": "npm run build && node build/app.js",
     "test": "jest"
   },
   "author": "NekoDrone",
@@ -13,11 +13,13 @@
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
     "@babel/preset-typescript": "^7.23.2",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "express": "^4.18.2"
