--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
