--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,11 @@
+  run-name: Run unit tests
   on:
     push:
-    workflow_dispatch: 
+    workflow_dispatch:
+    workflow_call: 
+    pull_request:
+      branches:
+        - main
   jobs:
     run-tests:
       runs-on: ubuntu-latest
@@ -19,5 +24,3 @@
             npm i
             npm run build
             npm run test
-          
-          
