--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "author": "NekoDrone",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/node": "^20.12.12",
+    "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "itty-router": "^5.0.17"
