--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Relictify uses Supabase to manage client configuration resources
+
+# Connect to Supabase via connection pooling with Supavisor.
+DATABASE_URL="INSERT_URL_HERE"
+
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="INSERT_URL_HERE"
