--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# Relictify uses Supabase to manage client configuration resources
+# Please make a copy of this file and name it '.env' and ensure that the variable values are filled.
+# WIP: If you require a full copy of the .env file, please seek the master credentials key from a contributor on discord.
+
+# Relictify uses Supabase to manage client configuration resources.
+# The format of the URL should follow "postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample" as an example.
 
 # Connect to Supabase via connection pooling with Supavisor.
 DATABASE_URL="INSERT_URL_HERE"
