--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,19 @@
 # Please make a copy of this file and name it '.env' and ensure that the variable values are filled.
 # WIP: If you require a full copy of the .env file, please seek the master credentials key from a contributor on discord.
 
-# Relictify uses Supabase to manage client configuration resources.
-# The format of the URL should follow "postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample" as an example.
+# Node Environment
+NODE_ENV="ENV"
 
-# Connect to Supabase via connection pooling with Supavisor.
+# Relictify uses Supabase to manage client configuration resources.
+## The format of the URL should follow "postgresql://janedoe:mypassword@localhost:5432/mydb?schema=sample" as an example.
+
+## Connect to Supabase via connection pooling with Supavisor.
 DATABASE_URL="INSERT_URL_HERE"
 
-# Direct connection to the database. Used for migrations.
+## Direct connection to the database. Used for migrations.
 DIRECT_URL="INSERT_URL_HERE"
+
+# Local server configuration
+
+## Authorization Key
+APP_AUTH_KEY="INSERT_KEY_HERE"
