--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "decrypt-prod": "cd env && bash ./decrypt.sh -e PROD",
     "dev": "npm run build && dotenv -e .env -c development -- node build/app.js",
     "prod": "npm ci && npm run build && dotenv -e .env -c production -- node build/app.js",
-    "reset-db-dev": "dotenv -e .env -c development -- prisma migrate reset --skip-seed",
-    "db-migrate-dev": "dotenv -e .env -c development -- prisma migrate dev --name init-db",
-    "seed-all-dev": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts && dotenv -e .env -c development ts-node tests/mocks/seedRelics.ts",
-    "seed-chars-dev": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts",
-    "seed-relics-dev": "dotenv -e .env -c development ts-node src/tests/mocks/seedRelics.ts",
-    "dev-studio": "dotenv -e .env -c development npx prisma studio"
+    "db:dev:reset": "dotenv -e .env -c development -- prisma migrate reset --skip-seed",
+    "db:dev:migrate": "dotenv -e .env -c development -- prisma migrate dev --name init-db",
+    "db:dev:seed:all": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts && dotenv -e .env -c development ts-node tests/mocks/seedRelics.ts",
+    "db:dev:seed:chars": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts",
+    "db:dev:seed:relics": "dotenv -e .env -c development ts-node src/tests/mocks/seedRelics.ts",
+    "db:dev:studio": "dotenv -e .env -c development npx prisma studio"
   },
   "author": "NekoDrone",
   "license": "ISC",
