--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "db:dev:seed:all": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts && dotenv -e .env -c development ts-node tests/mocks/seedRelics.ts",
     "db:dev:seed:chars": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts",
     "db:dev:seed:relics": "dotenv -e .env -c development ts-node src/tests/mocks/seedRelics.ts",
-    "db:dev:studio": "dotenv -e .env -c development npx prisma studio"
+    "db:dev:studio": "dotenv -e .env -c development npx prisma studio",
+    "db:prod:migrate": "dotenv -e .env -c production npx prisma migrate deploy"
   },
   "author": "NekoDrone",
   "license": "ISC",
