--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "db:dev:seed:chars": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts",
     "db:dev:seed:relics": "dotenv -e .env -c development ts-node src/tests/mocks/seedRelics.ts",
     "db:dev:studio": "dotenv -e .env -c development npx prisma studio",
-    "db:prod:migrate": "dotenv -e .env -c production npx prisma migrate deploy"
+    "db:prod:migrate": "dotenv -e .env -c production npx prisma migrate deploy",
+    "prod:deploy:vercel": "npm run db:prod:migrate && npm run prod"
   },
   "author": "NekoDrone",
   "license": "ISC",
