--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "dotenv-cli": "^7.4.2",
     "esbuild": "0.21.4",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
