refactor: rename app to index

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "vitest",
     "decrypt-dev": "cd env && bash ./decrypt.sh -e DEV",
     "decrypt-prod": "cd env && bash ./decrypt.sh -e PROD",
-    "dev": "npm run build && dotenv -e .env -c development -- node build/app.js",
-    "prod": "npm run build && dotenv -e .env -c production -- node build/app.js",
+    "dev": "npm run build",
+    "prod": "npm run build",
     "db:dev:reset": "dotenv -e .env -c development -- prisma migrate reset --skip-seed",
     "db:dev:migrate": "dotenv -e .env -c development -- prisma migrate dev --name init-db",
     "db:dev:seed:all": "dotenv -e .env -c development ts-node src/tests/mocks/seedCharacters.ts && dotenv -e .env -c development ts-node tests/mocks/seedRelics.ts",
